# icar-ros2-patrol

./: .gitignore  APP操作指南.md  LLM车端接口交接文档.md  README.md  pubspec.yaml
.github/workflows/: ci.yml  release.yml
.ignore/: navigation_p0_interface_alignment_plan.md
android/: .gitignore  gradle.properties
android/app/: build.gradle.kts
app/: .gitkeep  APP接入指南.md  app.py  requirements.txt  web_gateway.py
app_control/: package.xml  setup.cfg  setup.py
app_control/app_control/: app_bridge_node.py  command_parser.py  nav2_goal_adapter_node.py  velocity_mux_node.py  velocity_safety_logic.py
app_control/launch/: navigation_mux.launch.py
app_control/tests/: test_command_parser.py  test_velocity_safety_logic.py
audio/: README.md
cloud_bridge/: package.xml  setup.cfg  setup.py
cloud_bridge/cloud_bridge/: cloud_bridge_node.py  protocol.py
cloud_bridge/test/: test_protocol.py
config/: .gitkeep  vision_classes.json
config/navigation/maps/: mock_lab.pgm  mock_lab.yaml
config/navigation/mock/: checkpoints.yaml  map_metadata.yaml  nav_scenarios.yaml  obstacle_scenarios.yaml
datasets/water_public/: data.yaml
docs/: 2026-07-14实车一次性打通计划.md  APP对接LLM指南.md  APP控制改造指南.md  Flutter本地改动说明.md  HANDOFF_2026-07-13_FLUTTER_APK.md  LLM_APP与目标跟踪接入说明.md  ROS2节点表.md  Topic通信表.md  water_detection_local_test.md  中期答辩汇报.md  云平台与CI-CD实施计划.md  云平台集成指南.md  云服务器配置  导航与LLM联调计划.md  导航模块后续接车清单.md  小车配置  接口设计.md  智能巡检小车项目-概要设计文档.docx  智能巡检小车项目-需求分析报告.docx  智能巡检小车项目-项目管理文档.docx  模块集成产出清单.md  测试用例.md  积水分割训练指南.md  系统工作模式.md  节点与Topic汇总.md  视觉中期交付清单.md  视觉模块接入记录.md  项目进度记录.md
icar_interfaces/: CMakeLists.txt  package.xml
icar_interfaces/msg/: Detection.msg  DetectionArray.msg  EnvData.msg  NavStatus.msg  ObstacleStatus.msg  SensorAlert.msg  TaskLog.msg  TaskRequest.msg  TaskStatus.msg
icar_interfaces/srv/: GenerateReport.srv  ParseTask.srv  TaskControl.srv
lib/: main.dart
lib/pages/: control_page.dart  mission_log_page.dart  mission_page.dart  sensor_page.dart  settings_page.dart  status_page.dart  vision_page.dart
lib/services/: car_commands.dart  car_controller.dart  car_tcp_service.dart  cloud_mqtt_service.dart  cloud_protocol.dart  data_models.dart  vision_models.dart
lib/theme/: app_theme.dart
lib/widgets/: mjpeg_stream_view.dart
llm/: .env.example  .gitkeep  deepseek_client.py  json_protocol.py  llm_gateway_node.py  requirements.txt  robot_tools.py  test_all_tools.sh  test_every_tool.py  test_llm.py  test_play_audio.py  test_tool_calling.py  test_tools_ros.sh
llm/llm_gateway/: README.md  package.xml  setup.cfg  setup.py
llm/llm_gateway/llm_gateway/: __init__.py  complex_task.py  deepseek_client.py  llm_gateway_node.py  tool_intent.py
llm/llm_gateway/test/: test_complex_task.py  test_tool_intent.py
navigation/: .gitkeep  README.md  navigation_utils.py  package.xml  setup.py
navigation/lidar/: lidar_node.py
navigation/navigation/: nav2_bridge_node.py  navigation_mode_logic.py  navigation_node.py  patrol_node.py
navigation/obstacle_avoid/: obstacle_avoid_node.py
navigation/pose_bridge/: __init__.py  pose_bridge_node.py
navigation/slam/: slam_node.py
navigation/tests/: test_navigation_mode_logic.py  test_obstacle_scan_logic.py  test_pgm_parser.py
scripts/: build_release_bundle.sh  deploy.sh  download_water_dataset.sh  icar-keepalive.service  icar_guard.sh  icar_keepalive.sh  icar_startup.service  icar_startup.sh  icar_web_gateway.service  install_autostart.sh  install_release.sh  keyboard_ctrl.py  local_chat.py  local_control_ws_proxy.py  mac_voice_client.py  navigation_mux_launch.py  pull_release.sh  rebuild.sh  rollback_release.sh  run_bridge.sh  run_mock_demo.py  run_on_car.sh  run_water_image_test.cmd  run_water_image_test.ps1  safe_test.py  setup_audio.sh  split_water_dataset.py  start_app.sh  start_car_app_stack.sh  start_car_detection_test.sh  start_car_tracking_test.sh  start_car_vision_stack.sh  start_demo.sh  start_mock_demo.sh  start_navigation.sh  start_sensor.sh  start_vision.sh  start_vision_light.sh  tcp_ws_bridge.py  train_water_seg.py  (+2 more)
sensor/: .gitkeep
task_manager/: package.xml  setup.cfg  setup.py
task_manager/task_manager/: __init__.py  hazard_response_logic.py  mock_app_node.py  mock_navigation_node.py  mock_sensor_node.py  mock_vision_node.py  navigation_goal_logic.py  obstacle_alarm_logic.py  obstacle_alarm_node.py  report_generator_node.py  task_control_logic.py  task_manager_node.py
task_manager/tests/: test_hazard_response_logic.py  test_navigation_goal_logic.py  test_obstacle_alarm_logic.py  test_task_control_logic.py
test/: .gitkeep  cloud_protocol_test.dart  widget_test.dart
tests/: check_pos.sh  quick_nav_test.sh  test_icar_guard_process_check.ps1  test_navigation_mux_launch.ps1  test_startup_clean_runtime.ps1  test_startup_laser_tf_owner.ps1  test_startup_lock_fd.ps1  test_startup_map_config.ps1  test_startup_nav2_feedback_owner.ps1  test_startup_nav2_singleton.ps1  test_startup_process_check.sh  test_startup_vendor_n1.ps1  test_straight.sh  test_systemd_git_checkout_owner.ps1
videos/: 说明.md
vision/: .gitkeep  README.md  local_webcam_detect.py  water_eval.py
vision/vision_patrol/: package.xml  setup.cfg  setup.py
vision/vision_patrol/vision_patrol/: __init__.py  (+7 more)
voice/voice_control/: .env.example  README.md  package.xml  setup.py
voice/voice_control/test/: test_doubao_voice_prompt.py  test_intent_classifier.py  test_voice_command_router_logic.py  test_voice_motion_command.py  test_web_audio_turn_end.py  test_web_voice_protocol.py
voice/voice_control/voice_control/: __init__.py  doubao_protocol.py  doubao_voice_node.py  duplex_audio_node.py  intent_classifier.py  voice_command_router_logic.py  voice_command_router_node.py  voice_motion_command.py  web_voice_gateway_node.py  web_voice_protocol.py
web/: control_simulator.html  index.html  manifest.json
(+6 files in other folders)
