<?xml version="1.0"?>
<package format="3">
  <name>app_control</name>
  <version>0.1.0</version>
  <description>Safe mobile-app control bridge and velocity arbitration.</description>
  <maintainer email="xhy2539@example.com">icar team</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>icar_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <test_depend>ament_pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
