<?xml version="1.0"?>
<package format="3">
  <name>llm_gateway</name>
  <version>0.1.0</version>
  <description>LLM gateway for natural-language task parsing and patrol reports.</description>
  <maintainer email="xionghaoyu@example.com">熊浩宇</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>icar_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
