<?xml version="1.0"?>
<package format="3">
  <name>voice_control</name>
  <version>0.1.0</version>
  <description>Full-duplex MiniCPM-o voice bridge and safe task router.</description>
  <maintainer email="xionghaoyu@example.com">xionghaoyu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>icar_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
